fidoconfig 0.6
--------------
Sat Feb 20 21:18:51 MET 1999
  Tobias Ernst:
+ Wrote documentation for the packet forwarding feature.	
- Removed some things from the link structure that I did not need any
  longer for the PKT forwarder.
	
Sat Feb 20 19:26:54 MET 1999
  Tobias Ernst:
- Added the move_file routine. Use it to move files instead of rename,
  because it can also move across file system boundaries.
- Some changes to the structures required by the PKT forwarding feature.

Wed Feb 17 20:07:00 CET 1999
  Gabriel Plutzar:
- added a new remap statment. It takes the parameters
  ToName,OldAddr,NewAddr, seperated by commas. ToName or OldAddr may be *.
  If a Netmail meets the ToName and OldAddr Criteria, it is sent to NewAddr.
	
Mon Feb 15 18:28:21 CET 1999
- included sergeys patch for a correct readLine()
  Max Levenkov:
- forwardRequests option supported by fidoconfig and tparser
- changed the name of some enumerations
- added forwardPkt statement (on, secure, off) it will be implemented by tobi
- added autoCreateFile statement
	
----- cvs ci ------
Sun Feb 14 12:57:04 CET 1999
- included new fconf2fidogate from Gabriel
- applied patches from Antonio Perez so there is
  no need for the system calls in fconf2*

----- cvs ci ------
Fr  12 Feb 1999 14:02:37 CET [tobi]
- Revised makeUniqueDosFilename. It does not have to sleep before
  returning a file name now and is even more unique than previously :-)

----- cvs ci ------
Thu Feb 11 15:33:36 CET 1999
- fixed a small warning, where a time was compared to a NULL Pointer

----- cvs ci ------	
Wed Feb 10 16:04:46 MET 1999
- fixed a null pointer bug in tparser
	
----- cvs ci ------
Wed Feb 10 14:50:04 MET 1999 [tobi]
- added makeUniqueDosFilename() which can be used to create more or
  less unique PKT file names. See the comments in common.c for details.

----- cvs ci ------
Thu Feb  4 00:34:55 CET 1999
- fixed a bug in makefile.lnx which leads to the behaviour that
  libfidoconfig.so.$(VER) is not newly generated.