@@ -1,2 +1,3 @@
 /* released to the public domain */
 int patmat(char *raw,char *pat);
+int patimat(char *raw, char *pat); /* case insensitive */
